# ctddump

./: .claudeignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  RELEASING.md
.github/workflows/: ci.yml  publish.yml
docs/: book.toml
docs/src/: SUMMARY.md  configuration.md  installation.md  introduction.md  output-schema.md  scripts.md  technical-notes.md
docs/src/commands/: batch.md  compare.md  concat.md  convert.md  dedup.md  dropna.md  dropqc.md  filter.md  header.md  markdup.md  report.md
docs/src/examples/: arctic.md  baltic.md  mediterranean.md
scripts/: clean_data.sh  compare_data.sh  convert_data.sh  dedup_data.sh  download_data.sh  fetch_test_data.sh  prepare_data.sh  summary_data.sh  summary_site.sh
src/: batch.rs  cli.rs  compare.rs  concat.rs  convert.rs  dedup.rs  dropna.rs  dropqc.rs  dupkey.rs  filter.rs  grep.rs  header.rs  lib.rs  main.rs  markdup.rs  netcdf.rs
src/convert/: common.rs  cora.rs  cora_config.rs  cora_head.rs  nrt.rs  nrt_config.rs
src/header/: common.rs  cora.rs  nrt.rs
src/netcdf/: common.rs  common_head.rs  cora.rs  cora2.rs  cora_head.rs  cora_legacy.rs  nrt_ar.rs  nrt_bo.rs  nrt_gl.rs  nrt_head.rs  nrt_mo.rs
src/report/: format.rs  mod.rs  parquet.rs  summary.rs  yaml.rs
tests/: test_batch.rs  test_compare.rs  test_compare_streaming.rs  test_concat.rs  test_concat_parallel.rs  test_concat_streaming.rs  test_convert.rs  test_dedup.rs  test_dedup_streaming.rs  test_dispatch.rs  test_dropna.rs  test_dropqc.rs  test_filter.rs  test_header.rs  test_markdup_multi_rowgroup.rs  test_netcdf.rs  test_report.rs  test_report_summary.rs  test_streaming.rs  test_streaming_slice.rs
