[package]
name = "ctddump"
version = "0.24.2"
edition = "2021"
license = "MIT"
description = "Convert oceanographic CTD (Conductivity, Temperature, Depth) data from NetCDF to Parquet or YAML"
repository = "https://github.com/AIQC-Hub/ctddump"
homepage = "https://aiqc-hub.github.io/ctddump/"
documentation = "https://aiqc-hub.github.io/ctddump/"
readme = "README.md"
keywords = ["oceanography", "netcdf", "parquet", "ctd", "cli"]
categories = ["command-line-utilities", "science"]
exclude = ["CLAUDE.md", ".claudeignore", ".github/", "docs/", "scripts/", "RELEASING.md"]

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "0.8"
num-traits = "0.2"
chrono = "0.4"
netcdf = { version = "0.10", features = ["ndarray"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
polars = { version = "0.43", features = ["ndarray", "parquet", "dtype-i8", "lazy", "strings", "concat_str", "rank", "cum_agg"] }
gsw = "0.2.2"
walkdir = "2"
rayon = "1"
glob = "0.3"

[dev-dependencies]
tempfile = "3"

[features]
trace = []
