[package]
name = "ctddump"
version = "0.29.0"
edition = "2021"
license = "MIT"
description = "Convert oceanographic CTD (Conductivity, Temperature, Depth) data from NetCDF to Parquet or YAML"
repository = "https://github.com/AIQC-Hub/ctddump"
homepage = "https://aiqc-hub.github.io/ctddump/"
documentation = "https://aiqc-hub.github.io/ctddump/"
readme = "README.md"
keywords = ["oceanography", "netcdf", "parquet", "ctd", "cli"]
categories = ["command-line-utilities", "science"]
exclude = ["CLAUDE.md", ".claudeignore", ".github/", "docs/", "scripts/", "RELEASING.md"]

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "0.8"
num-traits = "0.2"
chrono = "0.4"
netcdf = { version = "0.10", features = ["ndarray"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
polars = { version = "0.43", features = ["ndarray", "parquet", "dtype-i8", "lazy", "strings", "concat_str", "rank", "cum_agg"] }
gsw = "0.2.2"
walkdir = "2"
rayon = "1"
glob = "0.3"

[dev-dependencies]
tempfile = "3"

[features]
trace = []
# Build HDF5 and netCDF from source instead of linking the system libraries.
# Only needed where those libraries cannot be installed; docs.rs is the case
# this exists for. Normal builds and `cargo install ctddump` should leave it off
# and install libhdf5-dev / libnetcdf-dev instead, which is far quicker.
static-netcdf = ["netcdf/static"]

# docs.rs has no libnetcdf and cannot install one, so an ordinary build there
# fails in the netcdf-sys build script and the crate gets no rendered API docs.
# Vendoring the C libraries is the only way around it.
[package.metadata.docs.rs]
features = ["static-netcdf"]
